--- a/recognizeapp/management/commands/report.html
+++ b/recognizeapp/management/commands/report.html
@@ -3,7 +3,7 @@
 <head>
     <title>Duplicate Images Report</title>
     <style>
-        table {
+        table#findings {
             width: 100%;
             border-collapse: collapse;
         }
@@ -36,12 +36,25 @@
 </head>
 <body>
 <h1>Duplicate Images Report</h1>
-<div>{{ findings|length }} issues found</div>
-<div id="counter"></div>
+<table id="metrics">
+    {% for k,v in metrics.items %}
+        <tr>
+            <th>{{ k }}</th>
+            <td>{{ v }}</td>
+        </tr>
+    {% endfor %}
+</table>
+<div>Total {{ findings|length }} issues found</div>
+<div>Filtered issues: <span id="counter"></span></div>
 <input type="number" id="threshold" step="0.01" value="0.5">
-Include Missing <input type="checkbox" id="include_missing" checked>
+Missing: <select id="include_missing">
+    <option value="i">Include</option>
+    <option value="e">Exclude</option>
+    <option value="o">Only</option>
+</select>
 Include Symmetric <input type="checkbox" id="include_symmetric" checked>
-<table>
+
+<table id="findings">
     <thead>
     <tr>
         <th>#</th>
@@ -53,13 +66,13 @@ Include Symmetric <input type="checkbox" id="include_symmetric" checked>
     <tbody>
     {% for entry in findings %}
         <tr data-pair="{{ entry.3 }}" data-threshold="{{ entry.2 }}"
-            class="{% if entry.1 == "NO FACE DETECTED" %}missing{% endif %}">
+            class="{% if entry.1 == "NO FACE DETECTED" or  entry.1 == "NO ENCODING" %}missing{% endif %}">
             <td>{{ forloop.counter }}</td>
             <td><img src="{{ entry.0 }}">
                 <div class="small">{{ entry.0 }}</div>
             </td>
             <td>
-                {% if entry.1 != "NO FACE DETECTED" %}
+                {% if entry.1 != "NO FACE DETECTED" and  entry.1 != "NO ENCODING" %}
                     <img src="{{ entry.1 }}">
                 {% endif %}
                 <div class="small">{{ entry.1 }}</div>
@@ -69,19 +82,14 @@ Include Symmetric <input type="checkbox" id="include_symmetric" checked>
     {% endfor %}
     </tbody>
 </table>
-{#<h3>Task Metrics</h3>#}
-{#<ul>#}
-{#    <li>Total time taken: {elapsed_time:.2f} seconds</li>#}
-{#    <li>Total RAM used: {ram_used:.2f} MB</li>#}
-{#    <li>Images without faces detected: {images_without_faces_count}</li>#}
-{#</ul>#}
+
 <script>
     $(function () {
         var count_rows = function () {
-            $("#counter").text($('table').find('tr').not('.hidden2').not('.hidden').not('.hidden3').length -1 );
+            $("#counter").text($('table#findings').find('tr').not('.hidden2').not('.hidden').not('.hidden3').length - 1);
         }
         filter_table = function (limit) {
-            $("table > tbody > tr").each(function () {
+            $("table#findings > tbody > tr").each(function () {
                 var rowt = parseFloat($(this).data("threshold"));
                 if (rowt <= parseFloat(limit)) {
                     $(this).addClass("hidden3")
@@ -94,21 +102,26 @@ Include Symmetric <input type="checkbox" id="include_symmetric" checked>
 
         $("#threshold").on("change", function () {
             filter_table($(this).val())
-        })
-        $("#threshold").on("keyup", function () {
+        }).on("keyup", function () {
             filter_table($(this).val())
-        })
-        $("#include_missing").on("click", function (value) {
-            if ($("#include_missing").is(":checked")) {
+        });
+        $("#include_missing").on("change", function () {
+            var value = $("#include_missing").val();
+            if (value === "i") {
+                $("table > tbody > tr").removeClass("hidden");
                 $(".missing").removeClass("hidden")
-            } else {
-                $(".missing").addClass("hidden")
+            } else if (value === 'e') {
+                $("table > tbody > tr").removeClass("hidden");
+                $(".missing").addClass("hidden");
+            } else if (value === 'o') {
+                $("table > tbody > tr").addClass("hidden");
+                $(".missing").removeClass("hidden")
             }
             count_rows();
         });
         $("#include_symmetric").on("click", function (value) {
             if ($("#include_symmetric").is(":checked")) {
-                $("table > tbody > tr").each(function () {
+                $("table#findings > tbody > tr").each(function () {
                     $(this).removeClass("hidden2");
                 })
             } else {
