--- a/src/recognizeapp/report.html
+++ b/src/recognizeapp/report.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Duplicate Images Report</title>
-        <style>
+<head>
+    <title>Duplicate Images Report</title>
+    <style>
         table#findings {
             width: 100%;
             border-collapse: collapse;
@@ -27,122 +27,176 @@
             display: none;
         }
 
+        .separator {
+
+        }
+
         .missing {
 
         }
-        </style>
-        <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
-                integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
-                crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <h1>Duplicate Images Report</h1>
-        <table id="metrics">
-            {% for k,v in metrics.items() %}
-                <tr>
-                    <th>{{ k }}</th>
-                    <td>{{ v }}</td>
-                </tr>
-            {% endfor %}
-        </table>
-        <div>Total {{ findings|length }} issues found</div>
-        <div>
-            Filtered issues: <span id="counter"></span>
-        </div>
-        Hide pairs where distance is greater than
-        <input type="number" id="threshold" step="0.01" value="0.5">
-        Missing:
-        <select id="include_missing">
-            <option value="i">Include</option>
-            <option value="e">Exclude</option>
-            <option value="o">Only</option>
-        </select>
+
+        .group1 {
+            background-color: beige;
+        }
+
+        .group2 {
+            background-color: #eabd9f;
+        }
+
+        .group3 {
+            background-color: #f38b8b;
+        }
+
+        tr.section-header {
+            cursor: pointer;
+        }
+
+        tr.section {
+            display: none;
+        }
+    </style>
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+            integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
+            crossorigin="anonymous"></script>
+</head>
+<body>
+<h1>Duplicate Images Report</h1>
+<div class="flex">
+
+</div>
+<table id="metrics">
+    {% for section,data in metrics.items() %}
+        <tr class="section-header" data-group="{{ section }}">
+            <td colspan="2">{{ section }}</td>
+        </tr>
+        {% for k,v in data.items() %}
+            <tr class="section {{ section }}">
+                <th>{{ k }}</th>
+                <td>{{ v }}</td>
+            </tr>
+        {% endfor %}
+    {% endfor %}
+</table>
+{% if edges == 0 %}
+    <div>Total {{ findings|length }} issues found</div>
+    <div>
+        Filtered issues: <span id="counter"></span>
+    </div>
+    Hide pairs where similarity is lower than
+    <input type="number" id="threshold" step="0.01" value="0.0">
+    {% if symmetric %}
         Include Symmetric
         <input type="checkbox" id="include_symmetric" checked>
-        <table id="findings">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>First Image</th>
-                    <th>Second Image</th>
-                    <th>Distance</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for entry in findings %}
-                    <tr data-pair="{{ entry.3 }}"
-                        data-threshold="{{ entry.2 }}"
-                        class="{% if entry.1 == "NO FACE DETECTED" or  entry.1 == "NO ENCODING" %}missing{% endif %}">
-                        <td>{{ loop.counter }}</td>
-                        <td>
-                            <img src="{{ entry.0 }}">
-                            <div class="small">{{ entry.0 }}</div>
-                        </td>
-                        <td>
-                            {% if entry.1 != "NO FACE DETECTED" and  entry.1 != "NO ENCODING" %}<img src="{{ entry.1 }}">{% endif %}
-                            <div class="small">{{ entry.1 }}</div>
-                        </td>
-                        <td>{{ entry.2 }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <script>
+    {% endif %}
+{% endif %}
+Missing:
+<select id="include_missing">
+    <option value="i">Include</option>
+    <option value="e">Exclude</option>
+    <option value="o">Only</option>
+</select>
+<table id="findings">
+    <thead>
+    <tr>
+        <th>#</th>
+        <th>First Image</th>
+        <th>Second Image</th>
+        <th>Similarity</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% set ns = namespace(counter=0,group=1) %}
+    {% for entry in findings %}
+        {% if entry.0 == "-" %}
+            <tr class="separator">
+                {% set ns.group = ns.group + 1 -%}
+                <td colspan="4">========================</td>
+            </tr>
+        {% else %}
+            {% set ns.counter = ns.counter + 1 -%}
+            {% set bg = 'group{0:d}'.format(ns.group) -%}
+            <tr data-pair="{{ entry.3 }}"
+                data-threshold="{{ entry.2 }}"
+                class="{{ bg }} {% if entry.1 == "NO_FACE_DETECTED" or  entry.1 == "MULTIPLE_FACE_DETECTED" %}missing{% endif %}">
+                <td>{{ ns.counter }}</td>
+                <td>
+                    <img src="{{ entry.0 }}">
+                    <div class="small">{{ entry.0 }}</div>
+                </td>
+                <td>
+                    {% if entry.1 != "NO_FACE_DETECTED" and  entry.1 != "MULTIPLE_FACE_DETECTED" %}
+                        <img src="{{ entry.1 }}">{% endif %}
+                    <div class="small">{{ entry.1 }}</div>
+                </td>
+                <td>{{ entry.2 }}</td>
+            </tr>
+        {% endif %}
+    {% endfor %}
+    </tbody>
+</table>
+<script>
     $(function () {
         var count_rows = function () {
             $("#counter").text($('table#findings').find('tr').not('.hidden2').not('.hidden').not('.hidden3').length - 1);
         }
-        filter_table = function (limit) {
-            $("table#findings > tbody > tr").each(function () {
-                var distance = parseFloat($(this).data("threshold"));
-                if (distance >= parseFloat(limit)) {
-                    $(this).addClass("hidden3")
-                } else {
-                    $(this).removeClass("hidden3")
-                }
-            })
-            count_rows();
-        }
 
-        $("#threshold").on("change", function () {
-            filter_table($(this).val())
-        }).on("keyup", function () {
-            filter_table($(this).val())
-        });
+        $("tr.section-header").on("click", function () {
+            var target = $(this).data("group");
+            $("tr." + target).toggle();
+        })
         $("#include_missing").on("change", function () {
             var value = $("#include_missing").val();
             if (value === "i") {
-                $("table > tbody > tr").removeClass("hidden");
+                $("table#findings > tbody > tr").removeClass("hidden");
                 $(".missing").removeClass("hidden")
             } else if (value === 'e') {
-                $("table > tbody > tr").removeClass("hidden");
+                $("table#findings > tbody > tr").removeClass("hidden");
                 $(".missing").addClass("hidden");
             } else if (value === 'o') {
-                $("table > tbody > tr").addClass("hidden");
+                $("table#findings > tbody > tr").addClass("hidden");
                 $(".missing").removeClass("hidden")
             }
             count_rows();
         });
-        $("#include_symmetric").on("click", function (value) {
-            if ($("#include_symmetric").is(":checked")) {
+        {% if edges == 0 %}
+            filter_table = function (limit) {
                 $("table#findings > tbody > tr").each(function () {
-                    $(this).removeClass("hidden2");
-                })
-            } else {
-                var processed = [];
-                $("table > tbody > tr").each(function () {
-                    var pair_key = $(this).data("pair");
-                    if (processed.indexOf(pair_key) >= 0) {
-                        $('table>tbody>tr[data-pair="' + pair_key + '"]').not($(this)).addClass("hidden2")
+                    var distance = parseFloat($(this).data("threshold"));
+                    if (distance <= parseFloat(limit)) {
+                        $(this).addClass("hidden3")
+                    } else {
+                        $(this).removeClass("hidden3")
                     }
-                    processed.push(pair_key)
                 })
+                count_rows();
             }
+
+            $("#threshold").on("change", function () {
+                filter_table($(this).val())
+            }).on("keyup", function () {
+                filter_table($(this).val())
+            });
+            $("#include_symmetric").on("click", function (value) {
+                if ($("#include_symmetric").is(":checked")) {
+                    $("table#findings > tbody > tr").each(function () {
+                        $(this).removeClass("hidden2");
+                    })
+                } else {
+                    var processed = [];
+                    $("table > tbody > tr").each(function () {
+                        var pair_key = $(this).data("pair");
+                        if (processed.indexOf(pair_key) >= 0) {
+                            $('table>tbody>tr[data-pair="' + pair_key + '"]').not($(this)).addClass("hidden2")
+                        }
+                        processed.push(pair_key)
+                    })
+                }
+                count_rows();
+            });
+            filter_table($("#threshold").val())
             count_rows();
-        });
-        filter_table($("#threshold").val())
-        count_rows();
+        {% endif %}
     });
-        </script>
-    </body>
+</script>
+</body>
 </html>
